fix: hidden stats align

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -234,9 +234,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   text-align: center;
-  width: 30%;
+  width: 31%;
   margin: 0.5rem;
   background-color: white;
   border-radius: 12px;
